# mtsocketclient

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.win  README  README.md  client.cpp  client.h  logger.cpp  logger.h  main.cpp  mingw.txt  mtsocket.cpp  mtsocket.h  safequeue.cpp  winsock_tst.dev
